# Merak

./: Cargo.toml  README.md
conf/: config.example.yaml
merak/: Cargo.toml
merak-database/: Cargo.toml
merak-database/src/: lib.rs  sqlite.rs  tag.rs  tags.rs
merak-entity/: Cargo.toml
merak-entity/src/: folder.rs  lib.rs  pic.rs  tag.rs
merak-web/: package.json  vite.config.ts
merak-web/src/: style.less
merak-web/src/api/: user.ts
merak-web/src/components/: FloderTree.vue  HelloWorld.vue  ItemList.vue
merak-web/src/layout/: Content.vue  Dashboard.vue  SidebarLeft.vue  SidebarRight.vue
merak-web/src/stores/: index.ts  layout.ts
merak/src/: app.rs  main.rs
merak/src/database/: mod.rs  sqlite.rs
merak/src/handler/: config.rs  folder.rs  mod.rs  pic.rs  tag.rs
merak/src/router/: folder.rs  mod.rs  pic.rs  tag.rs
web/: package.json
web/src/: App.vue  main.ts
web/src/components/: FloderTree.vue  ItemList.vue
web/src/layout/: Dashboard.vue  SidebarLeft.vue  SidebarRight.vue
web/src/router/: index.ts
web/src/stores/: layout.ts
web/src/utils/: http.ts
