[workspace]
members = ["merak"]

[workspace.package]
name = "Merak"
version = "0.1.0"
edition = "2021"
authors = ["gsxhnd"]
homepage = ""
description = ""
repository = "https://github.com/gsxhnd/Merak"
license = "MIT license"
categories = ["network"]
keywords = [""]
exclude = [".gitignore", ".cargo/config"]
rust-version = "1.72"

[workspace.dependencies]
axum = { version = "0.6" }
bytes = { version = "1.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
rust-embed = "6.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19" }
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
