[package]
name = "merak_database"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

[lib]
name = "merak_database"
path = "src/lib.rs"
edition = "2021"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
merak_entity = { path = "../merak-entity" }

sea-orm = { workspace = true }
sea-query = { workspace = true }
