[package]
name = "merak_entity"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
rust-version.workspace = true

[lib]
name = "merak_entity"
path = "src/lib.rs"
edition = "2021"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
