[package]
name = "merak"
version = "0.0.1"
edition = "2021"


[[bin]]
name = "merak"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
mime_guess = "2.0"
rusqlite = { workspace = true, features = ["bundled"] }
rust-embed = { workspace = true }
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
